Configure Nginx for HTTPS

--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -11,6 +11,18 @@ server {
     }
 
     location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name astrorehberi.com www.astrorehberi.com;
+
+    ssl_certificate /etc/letsencrypt/live/astrorehberi.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/astrorehberi.com/privkey.pem;
+
+    location / {
         proxy_pass http://hello_django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
