--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -26,6 +26,7 @@ server {
         proxy_pass http://hello_django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
     }
 
