--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
-    command: gunicorn astro_backend.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn astro_backend.wsgi:application --bind 0.0.0.0:8000 --timeout 900
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
