--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -28,6 +28,9 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
+        proxy_read_timeout 900;
+        proxy_connect_timeout 900;
+        proxy_send_timeout 900;
     }
 
     location /static/ {
