--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -36,4 +36,8 @@ server {
     location /static/ {
         alias /app/staticfiles/;
     }
+
+    location /media/ {
+        alias /app/media/;
+    }
 }
