--- a/astro_mobile/pubspec.yaml
+++ b/astro_mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   url_launcher: ^6.2.4
   shared_preferences: ^2.2.2
+  google_generative_ai: ^0.4.5
 
 
 
@@ -81,6 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icon/
+    - assets/data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
